; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/drivers_context/extr_orbis_ctx.c_orbis_ctx_bind_api.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/drivers_context/extr_orbis_ctx.c_orbis_ctx_bind_api.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ctx_orbis_api = common dso_local global i32 0, align 4
@GFX_CTX_OPENGL_ES_API = common dso_local global i32 0, align 4
@EGL_OPENGL_ES_API = common dso_local global i32 0, align 4
@EGL_FALSE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32, i32, i32)* @orbis_ctx_bind_api to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @orbis_ctx_bind_api(i8* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i8* %0, i8** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %10 = load i8*, i8** %6, align 8
  %11 = load i32, i32* %7, align 4
  store i32 %11, i32* @ctx_orbis_api, align 4
  %12 = load i32, i32* %7, align 4
  %13 = load i32, i32* @GFX_CTX_OPENGL_ES_API, align 4
  %14 = icmp eq i32 %12, %13
  br i1 %14, label %15, label %22

15:                                               ; preds = %4
  %16 = load i32, i32* @EGL_OPENGL_ES_API, align 4
  %17 = call i64 @eglBindAPI(i32 %16)
  %18 = load i64, i64* @EGL_FALSE, align 8
  %19 = icmp ne i64 %17, %18
  br i1 %19, label %20, label %21

20:                                               ; preds = %15
  store i32 1, i32* %5, align 4
  br label %23

21:                                               ; preds = %15
  br label %22

22:                                               ; preds = %21, %4
  store i32 0, i32* %5, align 4
  br label %23

23:                                               ; preds = %22, %20
  %24 = load i32, i32* %5, align 4
  ret i32 %24
}

declare dso_local i64 @eglBindAPI(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
